--- a/templates/folder.html
+++ b/templates/folder.html
@@ -6,13 +6,13 @@
   <title>{{ title }}</title>
   <style>
   body {
-  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  font-size: 1.4rem;
-  background: #f9fafb;
-  color: #111827;
-  line-height: 1.45;
-  margin: 2em;
-}
+    font-family: sans-serif;
+    font-size: 1.4rem;
+    background: #f9fafb;
+    color: #111827;
+    line-height: 1.45;
+    margin: 2em;
+  }
   </style>
   </head>
   <body>
