--- a/templates/main.html
+++ b/templates/main.html
@@ -144,9 +144,9 @@
     </script>
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-family: sans-serif;
             line-height: 1.6;
-            max-width: 900px;
+            max-width: 90vw;
             margin: 0 auto;
             padding: 20px;
             background: #f5f5f5;
@@ -160,7 +160,10 @@
             list-style-type: none;
             position: relative;
         }
-        
+        img {
+            max-width: 100%;
+        }
+
         /* smaller / compact filter box */
         #tag-selector {
             position: fixed;
