--- a/templates/serve_markdown.html
+++ b/templates/serve_markdown.html
@@ -138,7 +138,7 @@
    </script>
   <style>
 body {
-  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  font-family: sans-serif;
   background: #f9fafb;
   color: #111827;
   line-height: 1.45;
