--- a/templates/folder.html
+++ b/templates/folder.html
@@ -8,9 +8,8 @@
   body {
     font-family: sans-serif;
     font-size: 1.4rem;
-    background: #f9fafb;
-    color: #111827;
-    line-height: 1.45;
+    background: #f5f5f5;
+    line-height: 1.6;
     margin: 2em;
   }
   </style>
